# tsp-genetic-algorithm

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  node.h  results.txt
include/ga/: GeneticAlgorithm.h  Operators.h  Parameters.h  Path.h  Population.h  genetic.h  parameters.h  path.h
include/parallel/: ThreadPool.h
include/tsp/: Node.h  Tsp.h  tsp.h
include/utils/: Results.h
instances/: dummy.tsp  pla33810.tsp  pla85900.tsp
notebooks/: profiles.ipynb  results.ipynb  visualizations.ipynb
plot/: plot.py
plot/data/: a280.txt  pla33810.txt  pla33810data.txt  pla33kpmx.txt  pla85900.txt  pla85900data.txt  pla85900pmx.txt  pla88kpmx.txt  u574_1.txt  u574_2.txt
results/: .gitkeep
scripts/: batch-run.py  visualizations.py
src/: ThreadPool.cpp  ThreadPool.h  ThreadPool.tpp  genetic.cpp  genetic.h  main.cpp  node.cpp  node.h  parameters.cpp  parameters.h  path.cpp  path.h  tsp.cpp  tsp.h
src/ga/: GeneticAlgorithm.cpp  Operators.cpp  Parameters.cpp  Path.cpp  Population.cpp  genetic.cpp  parameters.cpp  path.cpp
src/parallel/: ThreadPool.cpp
src/tsp/: Node.cpp  Tsp.cpp  node.cpp  tsp.cpp
src/utils/: Results.cpp
